[IMP] various: display search filter from contact stat button
Purpose
=======
Currently, when we open records of various models through the stat button from
the contact form  view, records are filtered based on the domain given on action,
but the filter is not set so the user might find this confusing.

Specification
==============
This commit adds a search filter to search the record so that the user
can visualize the query.

Task-2671192

--- a/addons/calendar/views/calendar_views.xml
+++ b/addons/calendar/views/calendar_views.xml
@@ -448,6 +448,8 @@
                     <separator/>
                     <filter string="Date" name="group_by_start" domain="[]" context="{'group_by': 'start'}"/>
                 </group>
+                <filter string="Attendees" name="invite_partner" domain="[('partner_ids', 'child_of', context.get('meetings_parent_partner'))]" context="{'active_test': False}" invisible="1"/>
+                <separator/>
             </search>
         </field>
     </record>
