--- a/addons/loyalty/views/loyalty_card_views.xml
+++ b/addons/loyalty/views/loyalty_card_views.xml
@@ -62,7 +62,7 @@
         <field name="arch" type="xml">
             <search>
                 <field name="code"/>
-                <field name="partner_id"/>
+                <field name="partner_id" operator="child_of"/>
                 <field name="program_id"/>
                 <separator/>
                 <filter name="active" string="Active" domain="['&amp;', ('program_id.active', '=', True), '&amp;', ('points', '>', 0), '|', ('expiration_date', '>=', 'today'), ('expiration_date', '=', False)]"/>
