[IMP] survey: improve results page
Add a bunch of QOL improvements in the results page design:

- Display the survey results page in half page size to prevent having too
much blank space between the tables columns
- The filter buttons are now displayed under the survey title
- Show the leaderboard bar on the print preview
- Changing the eye dropdown icon to a caret for fold/unfold
- Align questions to the left to be on the same level as the sections
- Add an horizontal scroll to the matrix and simple/multiple choices tables
when the screen is not wide enough to display all the data
- Reduce vertical spacing between elements to gain space
- Reduce simple/multiple choices tables line height
- Reduce survey title, section title and KPIs font size
- Display the "Correct", "Partial", "Responded" and "Skipped" badges on a
single line and set a rounded border around.
- Removing the "Result Overview" title
- Removing survey description, section description and question description

Task-3707687

--- a/addons/survey/static/src/scss/survey_templates_results.scss
+++ b/addons/survey/static/src/scss/survey_templates_results.scss
@@ -23,6 +23,9 @@
         border: none !important;
     }
     .o_survey_result {
+        // force to print background-images to render the leaderboard bar
+        -webkit-print-color-adjust: exact !important; /* Chrome, Safari */
+        print-color-adjust: exact !important; /*Firefox*/
         canvas {
             margin-bottom: 2rem;
         }
@@ -112,6 +115,14 @@
 }
 
 .o_survey_results_question {
+    .o_survey_results_question_header {
+        button[aria-expanded="true"] i.fa-caret-right{
+            display: none;
+        }
+        button[aria-expanded="false"] i.fa-caret-down{
+            display: none;
+        }
+    }
     .o_survey_results_question_pill {
         .only_right_radius {
             border-radius: 0 2em 2em 0;
