--- a/addons/sale/report/sale_report_views.xml
+++ b/addons/sale/report/sale_report_views.xml
@@ -8,7 +8,7 @@
              <pivot string="Sales Analysis" sample="1">
                  <field name="team_id" type="col"/>
                  <field name="date" interval="month" type="row"/>
-                 <field name="price_subtotal" type="measure"/>
+                 <field name="product_uom_qty" type="measure"/>
              </pivot>
          </field>
     </record>
@@ -18,8 +18,8 @@
          <field name="model">sale.report</field>
          <field name="arch" type="xml">
              <graph string="Sales Analysis" type="line" sample="1">
-                 <field name="date" interval="day"/>
-                 <field name="price_subtotal" type="measure"/>
+                 <field name="date" interval="month"/>
+                 <field name="product_uom_qty" type="measure"/>
              </graph>
          </field>
     </record>
@@ -53,17 +53,20 @@
         <field name="name">sale.report.view.tree</field>
         <field name="model">sale.report</field>
         <field name="arch" type="xml">
-            <tree string="Sales Analysis">
+            <tree string="Sales Analysis" action="action_open_order" type="object">
                 <field name="date"/>
                 <field name="order_reference" optional="show"/>
-                <field name="partner_id" optional="hide"/>
                 <field name="product_id" string="Product" optional="show"/>
+                <field name="partner_id"/>
                 <field name="user_id" optional="show" widget="many2one_avatar_user"/>
-                <field name="team_id" optional="show"/>
+                <field name="team_id" optional="hide"/>
                 <field name="company_id" optional="show" groups="base.group_multi_company"/>
+                <field name="product_uom_qty" string="Quantity" sum="Sum of Quantity"/>
                 <field name="price_subtotal" optional="hide" sum="Sum of Untaxed Total"/>
+                <field name="price_unit" widget="monetary" avg="Average"/>
                 <field name="price_total" optional="show" sum="Sum of Total"/>
                 <field name="state" optional="hide"/>
+                <field name="pricelist_id" optional="hide"/>
                 <field name="line_invoice_status" optional="hide"/>
                 <field name="currency_id" column_invisible="True"/>
             </tree>
@@ -110,7 +113,7 @@
                     <filter string="Status" name="status" context="{'group_by':'state'}"/>
                     <filter string="Company" name="company" groups="base.group_multi_company" context="{'group_by':'company_id'}"/>
                     <separator/>
-                    <filter string="Order Date" name="date" context="{'group_by':'date'}"
+                    <filter string="Order Date" name="group_by_date" context="{'group_by':'date'}"
                             invisible="context.get('sale_report_view_hide_date')"/>
                     <filter string="Order Date" name="group_by_date_day" context="{'group_by':'date:day'}"
                             invisible="not context.get('sale_report_view_hide_date')"/>
@@ -163,7 +166,7 @@
     <record id="report_all_channels_sales_action" model="ir.actions.act_window">
         <field name="name">Sales Analysis</field>
         <field name="res_model">sale.report</field>
-        <field name="view_mode">pivot,tree,graph</field>
+        <field name="view_mode">tree,pivot,graph,form</field>
     </record>
 
     <record id="action_order_report_quotation_salesteam" model="ir.actions.act_window">
