[FIX] project: allow portal user to add image in task description
To reproduce:
=============
- share a project with a portal user
- connect as the portal user
- on a task paste an image in the description
- save -> AccessError

Problem:
========
Portal user doesn't have the right to create attachments

Solution:
=========
- when saving the record, editor tries to save the image as an attachment
by `POST` request on the route `/web_editor/attachment/add_image`

- `/web_editor/attachment/add_image` is not dedicated to portal user,
so the save method is patched to modify the route to custom one
`/project_sharing/attachment/add_image`

opw-3774447

--- a/addons/project/views/project_sharing_project_task_views.xml
+++ b/addons/project/views/project_sharing_project_task_views.xml
@@ -182,7 +182,9 @@
                     </group>
                     <notebook>
                         <page name="description_page" string="Description">
-                            <field name="description" type="html" options="{'collaborative': true}"/>
+                            <!-- Portal users get some commands disabled, notably /image, as they don't have access to ir.attachment -->
+                            <!-- workaround : They may copy/paste or drag/drop the image into description field -->
+                            <field name="description" type="html" options="{'collaborative': true, 'allowCommandImage': false}"/>
                         </page>
                         <page name="sub_tasks_page" string="Sub-tasks">
                             <field name="child_ids" context="{
