--- a/addons/account_audit_trail/report/audit_trail_report_views.xml
+++ b/addons/account_audit_trail/report/audit_trail_report_views.xml
@@ -8,7 +8,6 @@
         <field name="mode">primary</field>
         <field name="arch" type="xml">
             <tree edit="0" delete="0" create="0" action="action_open_document" type="object">
-                <field name="res_id" column_invisible="True"/>
                 <field name="date"/>
                 <field name="author_id" widget="many2one_avatar"/>
                 <field name="account_audit_log_move_id"/>
@@ -27,10 +26,11 @@
                 <field name="account_audit_log_move_id"/>
                 <field name="author_id"/>
                 <field name="date" string="Date"/>
-                <filter string="Update Only" name="update_only" domain="[('tracking_value_ids', '!=', False)]" groups="base.group_system"/>
+                <filter string="Update Only" name="filter_tracking_value_ids"
+                        domain="[('tracking_value_ids', '!=', False)]" groups="base.group_system"/>
                 <group expand="0" string="Group By">
                     <filter string="date" name="group_by_date" domain="[]" context="{'group_by': 'date'}"/>
-                    <filter string="Journal Entry" name="group_by_log_move_id" domain="[]" context="{'group_by': 'res_id'}"/>
+                    <filter string="Journal Entry" name="group_by_res_id" domain="[]" context="{'group_by': 'res_id'}"/>
                 </group>
             </search>
         </field>
@@ -48,9 +48,9 @@
         </field>
         <field name="domain">[
             ('model', '=', 'account.move'),
+            ('res_id', '!=', False),
             ('message_type', '=', 'notification'),
-            ('account_audit_log_move_id', '!=', False),
-            ('show_audit_log', '=', True),
+            ('account_audit_log_activated', '=', True),
         ]</field>
         <field name="search_view_id" ref="view_message_tree_audit_log_search"/>
     </record>
